Release 2.42.3

Copyright (c) 1998-2011 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.42.3 - March ??, 2011

    Corrected a bug on the code that simplifies the predicate clause
    generated by the compilation of a grammar rule. The code would loop
    when a grammar rule contained a meta-variable, which the Logtalk
    compiler should (but currently don't) report as illegal (the call/1
    control construct should be used instead on this case). Thanks to
    Hibeus for the bug report.

    Extended the "delegates" examples with a sample implementation of a
    delegator using a parametric object.


2.42.2 - January 25, 2011

    Updated the Logtalk compiler in order to allow checking for module
    predicate properties without requiring importing the predicates into
    "user" (note, however, that the module must still be loaded prior to
    the compilation of source files calling the module predicates).

    Updated the Logtalk compiler in order to check compile-time instantiated
    closure arguments on call/2-N goals for common programming errors.

    Updated the Logtalk compiler in order to generate warnings for lambda
    expressions with variables that are not declared as either free variables
    or lambda parameters or with variables that are declared as both free
    variables and lambda parameters. Thanks to Jan Burse for suggesting
    these sanity checks.

    Updated the Logtalk runtime in order to support using the <</2 control
    construct in closure meta-arguments of meta-predicates.

    Added support for compiling Free/Goal lambda expression calls (by
    automatically generating an auxiliary predicate whenever possible).
