@@ -15,12 +15,17 @@ RELEASE NOTES
 
 2.42.3 - March ??, 2011
 
+    Allow dynamic predicates declared in a category to be called in "this"
+    from within the category. In previous versions, such calls would result
+    in a compile-time error, forcing these predicates to be called in "self"
+    (using the ::/1 message sending control construct).
+
     Corrected a bug on the code that simplifies the predicate clause
     generated by the compilation of a grammar rule. The code would loop
     when a grammar rule contained a meta-variable, which the Logtalk
     compiler should (but currently don't) report as illegal (the call/1
     control construct should be used instead on this case). Thanks to
-    Hibeus for the bug report.
+    Nicolas Pelletier for the bug report.
 
     Extended the "delegates" examples with a sample implementation of a
     delegator using a parametric object.
